Split into multiple files
Single file started to get a little hard to navigate, so I have
performed completely arbitrary split of the contents:

 * obs-lv2 - OBS plugin callbacks
 * urid - implementation of the URID extension
 * ui - UI handling using suil
 * pots - everything that sets up or deals with plugin's ports
 * main - core initialization and stuff that doesn't belong anywhere
   elase

--- a/meson.build
+++ b/meson.build
@@ -8,8 +8,17 @@ deps =  [
   dependency('Qt5Widgets'),
 ]
 
+sources = [
+  'obs-lv2.cpp',
+  'ui.cpp',
+  'urid.cpp',
+  'ports.cpp',
+  'core.cpp',
+]
+
+
 shared_library(meson.project_name(),
-	       'main.cpp',
+	       sources,
 	       dependencies : deps,
 	       name_prefix : '',
 	       install_dir : 'obs-plugins')
