--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
 project('obs-lv2', 'cpp', license : 'GPL2+')
 
 deps =  [
-  dependency('lv2'),
+  dependency('lv2', version : '>=1.16.0'),
   dependency('libobs'),
   dependency('lilv-0'),
   dependency('suil-0'),
