Actually install the plugin
Mark the .so for install and set the install_dir.

Also, use prefix in meson example the README - OBS is very picky when it
comes to plugin paths.

Fixes: https://github.com/ivyl/obs-lv2/issues/4

--- a/meson.build
+++ b/meson.build
@@ -22,4 +22,5 @@ shared_library(meson.project_name(),
 	       sources,
 	       dependencies : deps,
 	       name_prefix : '',
-	       install_dir : 'obs-plugins')
+	       install: true,
+	       install_dir : get_option('libdir') / 'obs-plugins')
